--- a/public/manifest.json
+++ b/public/manifest.json
@@ -13,52 +13,16 @@
   "scope": "/",
   "icons": [
     {
-      "src": "/icons/icon-72x72.png",
-      "sizes": "72x72",
-      "type": "image/png",
-      "purpose": "maskable any"
+      "src": "/icons/sage-icon.svg",
+      "sizes": "any",
+      "type": "image/svg+xml",
+      "purpose": "any"
     },
     {
-      "src": "/icons/icon-96x96.png",
-      "sizes": "96x96",
-      "type": "image/png",
-      "purpose": "maskable any"
-    },
-    {
-      "src": "/icons/icon-128x128.png",
-      "sizes": "128x128",
-      "type": "image/png",
-      "purpose": "maskable any"
-    },
-    {
-      "src": "/icons/icon-144x144.png",
-      "sizes": "144x144",
-      "type": "image/png",
-      "purpose": "maskable any"
-    },
-    {
-      "src": "/icons/icon-152x152.png",
-      "sizes": "152x152",
-      "type": "image/png",
-      "purpose": "maskable any"
-    },
-    {
-      "src": "/icons/icon-192x192.png",
-      "sizes": "192x192",
-      "type": "image/png",
-      "purpose": "maskable any"
-    },
-    {
-      "src": "/icons/icon-384x384.png",
-      "sizes": "384x384",
-      "type": "image/png",
-      "purpose": "maskable any"
-    },
-    {
-      "src": "/icons/icon-512x512.png",
+      "src": "/icons/sage-icon.svg",
       "sizes": "512x512",
-      "type": "image/png",
-      "purpose": "maskable any"
+      "type": "image/svg+xml",
+      "purpose": "maskable"
     }
   ],
   "shortcuts": [
@@ -66,45 +30,19 @@
       "name": "Daily Guidance",
       "short_name": "Daily",
       "description": "Get your daily hexagram guidance",
-      "url": "/guidance",
-      "icons": [{ "src": "/icons/shortcut-daily.png", "sizes": "96x96" }]
+      "url": "/guidance"
     },
     {
       "name": "New Consultation",
       "short_name": "Consult",
       "description": "Ask the I Ching a question",
-      "url": "/consultation",
-      "icons": [{ "src": "/icons/shortcut-consultation.png", "sizes": "96x96" }]
+      "url": "/consultation"
     },
     {
       "name": "History",
       "short_name": "History",
       "description": "View your spiritual journey",
-      "url": "/history",
-      "icons": [{ "src": "/icons/shortcut-history.png", "sizes": "96x96" }]
-    }
-  ],
-  "screenshots": [
-    {
-      "src": "/screenshots/homepage-mobile.png",
-      "sizes": "390x844",
-      "type": "image/png",
-      "form_factor": "narrow",
-      "label": "Homepage with daily guidance"
-    },
-    {
-      "src": "/screenshots/consultation-mobile.png",
-      "sizes": "390x844",
-      "type": "image/png",
-      "form_factor": "narrow",
-      "label": "I Ching consultation interface"
-    },
-    {
-      "src": "/screenshots/homepage-desktop.png",
-      "sizes": "1280x800",
-      "type": "image/png",
-      "form_factor": "wide",
-      "label": "Desktop homepage experience"
+      "url": "/history"
     }
   ],
   "prefer_related_applications": false,
